# todo_lists

./: .dockerignore  .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 7b0278a13b5b_init_migrations.py
src/api/: __init__.py  auth.py
src/api/endpoints/: __init__.py  sign_in.py  sign_up.py  tasks.py  test_access_token.py
src/api/schemas/: base.py  error.py  jwt.py  success.py  task.py
src/db/: __orm_models_declarative.py  orm_models.py  unit_of_work.py
src/db/repositories/: todo_lists.py  users.py
src/db/views/: todo_lists.py  users.py
src/domain/: __init__.py  model.py
src/service_layer/services/: todo_lists.py  users.py
src/utils/: config.py  schemas.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/unit/: test_services.py
